<resources>
    <string name="app_name">Bookbnb</string>
    <string name="login_title">Inicia sesión</string>
    <string name="login_subtitle">Ingresa con tu cuenta de correo electrónico.</string>
    <string name="text_question_not_register">¿No tienes una cuenta?</string>
    <string name="text_register"><u>Regístrate</u></string>
    <string name="text_forgotten_pass">¿Olvidaste tu contraseña?</string>
    <string name="login_text_button">Iniciar sesión</string>
    <string name="register_title">Registrarse</string>
    <string name="register_subtitle">Agrega la información</string>
    <string name="register_confirmed_description">Verifica la casilla de correo electrónico para confirmar el registro.</string>
    <string name="email_field_label">Correo electrónico</string>
    <string name="pass_field_label">Contraseña</string>
    <string name="name_field_label">Nombre</string>
    <string name="surname_field_label">Apellido</string>
    <string name="birthdate_field_label">Fecha de nacimiento</string>
    <string name="gender_field_label">Género</string>
    <string name="phone_number_field_label">Número de teléfono</string>
    <string name="next_button_text">Siguiente</string>
    <string name="birthdate_register_description_text">Debes tener al menos 18 años para registrarte. Los otros usuarios de Bookbnb no podrán ver tu fecha de nacimiento.</string>
    <string name="prefix_empty_msg_validation">Ingrese %s</string>
    <string name="email_empty_msg_validation">un correo electrónico</string>
    <string name="pass_empty_msg_validation">una contraseña</string>
    <string name="birth_date_picker_empty_msg_validation">una fecha de nacimiento</string>
    <string name="date_picker_empty_msg_validation">una fecha</string>
    <string name="name_empty_msg_validation">un nombre</string>
    <string name="surname_empty_msg_validation">un apellido</string>
    <string name="address_empty_msg_validation">una dirección</string>
    <string name="city_empty_msg_validation">una ciudad</string>
    <string name="country_empty_msg_validation">un país</string>
    <string name="title_empty_msg_validation">un título</string>
    <string name="subtitle_empty_msg_validation">una descripción</string>
    <string name="price_empty_msg_validation">un precio</string>
    <string name="email_invalid_msg_validation">El formato de email no es válido</string>
    <string name="pass_spaces_msg_validation">La contraseña no debe tener espacios</string>
    <string name="pass_min_length_msg_validation">La contraseña debe tener al menos 8 caracteres</string>
    <string name="birth_date_min_age_validation">Debes tener al menos 18 años para registrarte</string>
    <string name="phone_number_validation">Ingrese un número de teléfono válido</string>
    <string name="title_birth_date_picker_dialog">Indica tu fecha de nacimiento</string>
    <string name="title_date_picker_dialog">Seleccione una fecha</string>
    <string name="accept_text_button_dialog">ACEPTAR</string>
    <string name="cancel_text_button_dialog">CANCELAR</string>
    <string name="view_profile_text">Ver perfil</string>
    <string name="view_profile_host_title_text">ANFITRIÓN</string>
    <string name="view_profile_publish_text">Realizar una publicación</string>
    <string name="view_profile_my_posts_text">Mis publicaciones</string>
    <string name="view_profile_my_bookings_text">Mis reservas</string>
    <string name="view_profile_account_config_title_text">CONFIGURACIÓN DE LA CUENTA</string>
    <string name="view_profile_account_info_text">Información personal</string>
    <string name="view_profile_logout_text">Cerrar sesión</string>
    <string name="view_profile_version_text">VERSIÓN</string>
    <string name="my_posts_all_tab_text">Publicaciones</string>
    <string name="my_posts_bookings_tab_text">Reservas pendientes</string>
    <string name="my_posts_accept_text_button">Aceptar</string>
    <string name="my_posts_reject_text_button">Rechazar</string>
    <string name="my_posts_empty_posts_text">No hay publicaciones</string>
    <string name="my_posts_empty_bookings_text">No hay solicitudes</string>
    <string name="my_posts_loading_request_text">Espere…</string>
    <string name="my_posts_loading_request_description">Estamos enviando su respuesta de solicitud.</string>
    <string name="my_bookings_empty_text">No hay reservas</string>
    <string name="my_bookings_accepted">Aceptado</string>
    <string name="my_bookings_pending">Pendiente</string>
    <string name="my_bookings_rejected">Rechazado</string>
    <string name="edit_info_profile_already_exists_error_description">El correo ingresado ya existe, introduzca un correo diferente.</string>
    <string name="edit_info_profile_title">Información personal</string>
    <string name="edit_info_profile_text">Edita tu información</string>
    <string name="edit_info_profile_button">Editar información</string>
    <string name="edit_info_profile_confirmed_description">La información personal ha sido actualizada.</string>
    <string name="edit_info_profile_male_genre">Hombre</string>
    <string name="edit_info_profile_female_genre">Mujer</string>
    <string name="start_login_title_text">Tu perfil</string>
    <string name="start_login_subtitle_text">Inicia sesión y empieza a planificar tu próximo viaje.</string>
    <string name="start_login_email_text">Iniciar con tu correo electrónico</string>
    <string name="start_login_facebook_text">Iniciar con Facebook</string>
    <string name="o_well_text">o bien</string>
    <string name="facebook_app_id">412582140100480</string>
    <string name="fb_login_protocol_scheme">fb412582140100480</string>
    <string name="footer_bar_search_menu">Explora</string>
    <string name="footer_bar_favorites_menu">Favoritos</string>
    <string name="footer_bar_messages_menu">Mensajes</string>
    <string name="footer_bar_profile_menu">Perfil</string>
    <string name="publish_title">Publica tu alojamiento</string>
    <string name="publish_subtitle">Completa los datos de tu alojamiento que será publicado y visto por otros usuarios.</string>
    <string name="publish_text_button">Publicar</string>
    <string name="publish_welcome_title">¡Hola, %s! Vamos a empezar creando la publicación de tu alojamiento.</string>
    <string name="publish_guest_quantity_title">¿Cuántos huéspedes pueden alojarse?</string>
    <string name="publish_guest_quantity_subtitle">Asegúrate de tener camas suficientes para que todos tus huéspedes duerman cómodamente.</string>
    <string name="publish_bed_distribution_title">¿Cómo son las camas?</string>
    <string name="publish_bed_distribution_subtitle">Ayuda a los huéspedes a entender dónde pueden dormir indicando el tipo de cama que hay en cada habitación.</string>
    <string name="publish_location_title">¿Dónde se encuentra tu lugar?</string>
    <string name="publish_location_subtitle">Solo los huéspedes con reservación confirmada podrán consultar tu dirección exacta, a los demás les mostraremos una ubicación aproximada.</string>
    <string name="publish_map_location_title">¿Está el pin en el lugar correcto?</string>
    <string name="publish_map_location_subtitle">Comprueba si la ubicación en el mapa de acuerdo a los datos ingresados es correcta.</string>
    <string name="publish_stay_name_title">Dale un nombre a tu espacio</string>
    <string name="publish_stay_name_subtitle">Describe tu alojamiento a grandes rasgos para que los huéspedes puedan hacerse una idea general antes de entrar en detalles.</string>
    <string name="publish_stay_services_title">¿Qué servicios ofrecerás?</string>
    <string name="publish_stay_services_subtitle">Los huéspedes se sentirán como en casa si les ofreces algunos elementos básicos durante su estancia.</string>
    <string name="publish_stay_security_title">Seguridad en el hogar</string>
    <string name="publish_stay_installations_title">¿Qué pueden utilizar los huéspedes?</string>
    <string name="publish_stay_installations_subtitle">Los espacios deben encontrarse dentro de los límites de la propiedad.</string>
    <string name="publish_price_title">Precio estándar</string>
    <string name="publish_price_subtitle">Tu precio estándar es la tarifa por noche que se aplica por defecto.</string>
    <string name="publish_availability_type_label">¿De qué dispondrán los huéspedes?</string>
    <string name="publish_entire_stay_text_item">Alojamiento entero</string>
    <string name="publish_entire_stay_text_description">Los huéspedes disponen del alojamiento entero solo para ellos: cuenta con una entrada independiente y no se comparten espacios. Por lo general, incluye un dormitorio, un baño y una cocina.</string>
    <string name="publish_private_room_text_item">Habitación privada</string>
    <string name="publish_private_room_text_description">Los huéspedes disponen de un dormitorio privado. Podrían compartirse otras zonas.</string>
    <string name="publish_shared_room_text_item">Habitación compartida</string>
    <string name="publish_shared_room_text_description">Los huéspedes duermen en un dormitorio o zona común que podrían compartir con otras personas.</string>
    <string name="publish_stay_type_label">¿Qué tipo de alojamiento es?</string>
    <string name="publish_home_type_text_item">Casa</string>
    <string name="publish_home_type_text_description">Suelen ser estructuras independientes, pero algunas viviendas, como los dúplex, pueden ser adosadas o compartir las zonas exteriores con otras.</string>
    <string name="publish_hotel_type_text_item">Hotel</string>
    <string name="publish_hotel_type_text_description">Suelen encontrarse en edificios o complejos residenciales, en donde viven otras personas.</string>
    <string name="publish_guest_quantity_label">¿Cuántos huéspedes pueden alojarse?</string>
    <string name="publish_guest_quantity_item_label">Huéspedes</string>
    <string name="publish_bed_quantity_label">¿Cuántas camas hay?</string>
    <string name="publish_bed_quantity_item_label">Camas</string>
    <string name="publish_bathroom_quantity_label">¿Cuántos baños hay?</string>
    <string name="publish_bathroom_quantity_item_label">Baños</string>
    <string name="publish_bedroom_quantity_label">¿Cuántos dormitorios hay?</string>
    <string name="publish_bedroom_quantity_item_label">Dormitorios</string>
    <string name="publish_bed_distribution_label">Distribución de camas por habitación</string>
    <string name="publish_bed_distribution_item_label">Habitación %d</string>
    <string name="publish_bed_distribution_add_beds_link_text">Agregar camas</string>
    <string name="publish_bed_distribution_edit_link_text">Editar</string>
    <string name="publish_bed_distribution_empty_text">No se agregaron habitaciones</string>
    <string name="publish_bed_distribution_dialog_title">¿Cuántas camas de cada tipo tiene esta habitación?</string>
    <string name="publish_single_bed_label">Camas individuales</string>
    <string name="publish_double_bed_label">Camas matrimoniales</string>
    <string name="publish_cribs_bed_label">Cunas</string>
    <string name="check_location_button_text">Comprobando dirección…</string>
    <string name="invalid_location_text">Dirección inválida</string>
    <string name="publish_element_basics_service_label">Elementos básicos</string>
    <string name="publish_add_photo_text">Agregar foto</string>
    <string name="publish_exit_dialog">X</string>
    <string name="publish_choose_photo_button">Seleccionar</string>
    <string name="publish_upload_photo_button">Cargar</string>
    <string name="home_search_hint">¿A dónde vas?</string>
    <string name="home_search_title">Escápate</string>
    <string name="home_search_subtitle">Encuentra los mejores alojamientos</string>
    <string name="chat_not_login_title">Inicio de sesión requerido</string>
    <string name="chat_not_login_subtitle">Es necesario iniciar sesión para poder acceder a la sala de chats.</string>
</resources>