<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/my_posts_title"
        style="@style/bkbnbNormalTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/bkbnb24dp"
        android:paddingTop="@dimen/bkbnb16dp"
        android:paddingBottom="@dimen/bkbnb22dp"
        android:text="@string/view_profile_my_posts_text" />

    <LinearLayout
        android:id="@+id/tabs_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/my_posts_tab"
            style="@style/bkbnbSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/bkbnb16dp"
            android:text="@string/my_posts_all_tab_text" />

        <TextView
            android:id="@+id/bookings_tab"
            style="@style/bkbnbSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/bkbnb16dp"
            android:text="@string/my_posts_bookings_tab_text" />

    </LinearLayout>

    <View
        android:id="@+id/header_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bkbnb2dp"
        android:background="@color/colorBackgroundInputFieldDisabled"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/bkbnb8dp"
        android:clipToPadding="false" />

    <TextView
        android:id="@+id/empty_posts_text"
        style="@style/bkbnbOptionProfileMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="@dimen/bkbnb22dp"
        android:visibility="gone"
        tools:text="@string/my_posts_empty_posts_text" />

</LinearLayout>