<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/bkbnb28dp"
    android:paddingTop="@dimen/bkbnb28dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        style="@style/bkbnbTextTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitle"
        android:layout_marginBottom="@dimen/bkbnb8dp"
        android:text="@string/title_date_picker_dialog"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date_picker" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/cancel_button"
        style="@style/bkbnbCancelTextButtonDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/bkbnb18dp"
        android:text="@string/cancel_text_button_dialog"
        app:layout_constraintEnd_toStartOf="@+id/continue_button"
        app:layout_constraintTop_toTopOf="@id/continue_button"
        app:layout_constraintBottom_toBottomOf="@id/continue_button" />

    <TextView
        android:id="@+id/continue_button"
        style="@style/bkbnbAcceptTextButtonDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bkbnb14dp"
        android:text="@string/accept_text_button_dialog"
        app:layout_constraintEnd_toEndOf="@+id/date_picker"
        app:layout_constraintTop_toBottomOf="@+id/date_picker" />

</androidx.constraintlayout.widget.ConstraintLayout>
