<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/bkbnb64dp">

        <TextView
            android:id="@+id/bkbnb_form_title"
            style="@style/bkbnbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bkbnb24dp"
            android:layout_marginTop="@dimen/bkbnb32dp"
            android:layout_marginEnd="@dimen/bkbnb24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constrainedWidth="true"
            tools:text="Título" />

        <TextView
            android:id="@+id/bkbnb_form_subtitle"
            style="@style/bkbnbSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bkbnb8dp"
            android:layout_marginEnd="@dimen/bkbnb24dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bkbnb_form_title"
            app:layout_constraintTop_toBottomOf="@+id/bkbnb_form_title"
            tools:text="Subtítulo" />

        <LinearLayout
            android:id="@+id/input_fields_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/bkbnb24dp"
            android:layout_marginTop="@dimen/bkbnb64dp"
            android:layout_marginEnd="@dimen/bkbnb24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bkbnb_form_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/bkbnb_form_subtitle" />

        <TextView
            android:id="@+id/text_not_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bkbnbSubtitle"
            android:text="@string/text_question_not_register"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/input_fields_container"
            app:layout_constraintTop_toBottomOf="@+id/input_fields_container" />

        <TextView
            android:id="@+id/login_register_text"
            style="@style/bkbnbSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:layout_marginStart="@dimen/bkbnb4dp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/text_not_register"
            app:layout_constraintStart_toEndOf="@+id/text_not_register"
            app:layout_constraintTop_toTopOf="@+id/text_not_register" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bkbnb40dp"
            android:background="@drawable/button_ripple"
            android:text="@string/login_text_button"
            android:paddingStart="@dimen/bkbnb32dp"
            android:paddingEnd="@dimen/bkbnb32dp"
            style="@style/bkbnbButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_not_register" />

        <LinearLayout
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bkbnb48dp"
            android:visibility="invisible"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:indeterminateTint="@color/colorButton"
                android:indeterminateTintMode="src_in"
                android:indeterminate="true"
                android:layout_width="@dimen/bkbnb24dp"
                android:layout_height="@dimen/bkbnb24dp"
                android:layout_marginEnd="@dimen/bkbnb8dp"/>

            <TextView
                style="@style/bkbnbSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_logging_spinner"
                android:layout_marginStart="@dimen/bkbnb4dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>